--- a/snowflake-server/src/main/resources/application-dev.properties
+++ b/snowflake-server/src/main/resources/application-dev.properties
@@ -1,6 +1,7 @@
-snowflake.zk.host=123.123.123.123:8081
+snowflake.zk.hosts=123.123.123.123:8081
 snowflake.zk.bashPath=""
 snowflake.zk.sessionTimeout=
+snowflake.zk.connectionTimeout=
 snowflake.config.datacenterId=0
 snowflake.config.workerIdZkPath=/snowflake-servers
 snowflake.config.skipSanityChecks=false
