--- a/snowflake-server/pom.xml
+++ b/snowflake-server/pom.xml
@@ -13,12 +13,8 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
@@ -45,6 +41,6 @@
 			<artifactId>snowflake-core</artifactId>
 			<version>${parent.version}</version>
 		</dependency>
-	</dependencies>
 
+	</dependencies>
 </project>
