--- a/snowflake-server/src/main/resources/application.properties
+++ b/snowflake-server/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=Snowflake
 server.port=8080
-spring.main.sources=com.shuidihuzhu.snowflake.server.Application
+spring.main.sources=io.shuidi.snowflake.Application
 spring.mvc.date-format=yyyy-MM-dd HH:mm:ss
 server.compression.enabled:true
 server.compression.min-response-size:1
 server.connection-timeout=5000
-spring.profiles.active=dev
+spring.profiles.active=local
