--- a/snowflake-server/src/main/resources/application-online.properties
+++ b/snowflake-server/src/main/resources/application-online.properties
@@ -1,11 +1,13 @@
-snowflake.zk.host=172.17.0.60:2181,172.17.0.48:2181,172.17.0.46:2181
-snowflake.zk.bashPath=/snowflake
+snowflake.zk.hosts=172.17.0.60:2181,172.17.0.48:2181,172.17.0.46:2181
 snowflake.zk.sessionTimeout=10000
+snowflake.zk.connectionTimeout=1000
+snowflake.config.basePath=/snowflake
 snowflake.config.datacenterId=0
-snowflake.config.workerIdZkPath=/snowflake-servers
+snowflake.config.workerIdZkPath=${snowflake.config.basePath}/servers
+snowflake.config.leaderPath=${snowflake.config.basePath}/leader
 snowflake.config.skipSanityChecks=false
 snowflake.reporter.category=snowflake
-snowflake.reporter.host=123.123.123.123
+snowflake.reporter.host=127.0.0.1
 snowflake.reporter.type=redis
 snowflake.reporter.port=6379
 snowflake.reporter.flushQueueLimit=1000
