--- a/snowflake-client/pom.xml
+++ b/snowflake-client/pom.xml
@@ -12,35 +12,11 @@
 	<groupId>io.shuidi</groupId>
 	<artifactId>snowflake-client</artifactId>
 	<dependencies>
-		<!--<dependency>-->
-			<!--<groupId>com.google.guava</groupId>-->
-			<!--<artifactId>guava</artifactId>-->
-		<!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>org.slf4j</groupId>-->
-			<!--<artifactId>slf4j-api</artifactId>-->
-		<!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>org.apache.logging.log4j</groupId>-->
-			<!--<artifactId>log4j-slf4j-impl</artifactId>-->
-		<!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>org.apache.logging.log4j</groupId>-->
-			<!--<artifactId>log4j-core</artifactId>-->
-		<!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>org.slf4j</groupId>-->
-			<!--<artifactId>jul-to-slf4j</artifactId>-->
-		<!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>org.slf4j</groupId>-->
-			<!--<artifactId>jcl-over-slf4j</artifactId>-->
-		<!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>org.springframework</groupId>-->
-			<!--<artifactId>spring-context</artifactId>-->
-			<!--<version>4.3.3.RELEASE</version>-->
-		<!--</dependency>-->
+		<dependency>
+			<groupId>io.shuidi</groupId>
+			<artifactId>snowflake-core</artifactId>
+			<version>${parent.version}</version>
+		</dependency>
 	</dependencies>
 
 </project>
