--- a/snowflake-server/src/main/resources/application.properties
+++ b/snowflake-server/src/main/resources/application.properties
@@ -6,3 +6,6 @@ server.compression.enabled:true
 server.compression.min-response-size:1
 server.connection-timeout=5000
 spring.profiles.active=local
+server.tomcat.max-connections=10000
+server.tomcat.max-threads=2000
+server.tomcat.max-http-post-size=1048576
