--- a/snowflake-core/pom.xml
+++ b/snowflake-core/pom.xml
@@ -47,6 +47,17 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.dropwizard.metrics</groupId>
+			<artifactId>metrics-core</artifactId>
+			<version>3.2.4</version>
+		</dependency>
+		<dependency>
+			<groupId>io.projectreactor</groupId>
+			<artifactId>reactor-core</artifactId>
+			<version>3.0.5.RELEASE</version>
+		</dependency>
+
 	</dependencies>
 
 
