--- a/snowflake-core/pom.xml
+++ b/snowflake-core/pom.xml
@@ -19,6 +19,15 @@
 			<version>${curator.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.curator</groupId>
 			<artifactId>curator-x-discovery</artifactId>
 			<version>${curator.version}</version>
@@ -57,7 +66,6 @@
 			<artifactId>reactor-core</artifactId>
 			<version>3.0.5.RELEASE</version>
 		</dependency>
-
 	</dependencies>
 
 
