--- a/snowflake-server/src/main/resources/application-local.properties
+++ b/snowflake-server/src/main/resources/application-local.properties
@@ -5,6 +5,8 @@ snowflake.config.basePath=/snowflake
 snowflake.config.datacenterId=0
 snowflake.config.workerIdZkPath=${snowflake.config.basePath}/servers
 snowflake.config.leaderPath=${snowflake.config.basePath}/leader
+snowflake.config.lockPath=${snowflake.config.basePath}/lock
+snowflake.config.storePath=${snowflake.config.basePath}/store
 snowflake.config.skipSanityChecks=false
 snowflake.reporter.category=snowflake
 snowflake.reporter.host=127.0.0.1
