优化了代码

--- a/snowflake-server/src/main/resources/application-online.properties
+++ b/snowflake-server/src/main/resources/application-online.properties
@@ -5,10 +5,12 @@ snowflake.config.basePath=/snowflake
 snowflake.config.datacenterId=0
 snowflake.config.workerIdZkPath=${snowflake.config.basePath}/servers
 snowflake.config.leaderPath=${snowflake.config.basePath}/leader
+snowflake.config.lockPath=${snowflake.config.basePath}/lock
+snowflake.config.storePath=${snowflake.config.basePath}/store
+snowflake.config.sequencePath=${snowflake.config.basePath}/sequence
 snowflake.config.skipSanityChecks=false
 snowflake.reporter.category=snowflake
 snowflake.reporter.host=127.0.0.1
 snowflake.reporter.type=redis
 snowflake.reporter.port=6379
 snowflake.reporter.flushQueueLimit=1000
-
