--- a/snowflake-server/src/main/resources/application.properties
+++ b/snowflake-server/src/main/resources/application.properties
@@ -3,8 +3,6 @@ server.port=8080
 spring.main.sources=io.shuidi.snowflake.Application
 spring.mvc.date-format=yyyy-MM-dd HH:mm:ss
 spring.profiles.active=local
-server.compression.enabled:true
-server.compression.min-response-size:1
-server.tomcat.max-connections=100000
-server.tomcat.max-threads=1000
+server.compression.enabled=true
 server.connection-timeout=5000
+server.undertow.worker-threads=20
